# jeli

./: .gitignore  README.md
docs/: api-overview.md  (+4 more)
jeli-server/: .env.example  CLAUDE.md  Dockerfile  Makefile  alembic.ini  docker-compose.yml  main.py  pyproject.toml
jeli-server/Jeli-Bruno/: .gitignore  WebSocket.yml  health.yml  opencollection.yml
jeli-server/Jeli-Bruno/assets/: not-an-image.txt
jeli-server/Jeli-Bruno/auth/: Login.yml  Refresh.yml  Register With Info.yml  Register.yml
jeli-server/Jeli-Bruno/environments/: local.yml
jeli-server/Jeli-Bruno/family/: Get Before Create.yml  Get By Owner.yml  Get Mine.yml  Upsert.yml  folder.yml
jeli-server/Jeli-Bruno/graph/: Create.yml  Get Graph.yml  Join.yml  Successor Candidates.yml  folder.yml
jeli-server/Jeli-Bruno/marriage-proposals/: Confirm.yml  Create.yml  Get By Id.yml  List.yml  Reject.yml  folder.yml
jeli-server/Jeli-Bruno/matches/: Confirm.yml  Reject.yml  folder.yml
jeli-server/Jeli-Bruno/media/: Get By Id.yml  Set Person Avatar.yml  Set User Avatar.yml  Upload Rejects Unsupported Type.yml  Upload.yml  folder.yml
jeli-server/Jeli-Bruno/messenger/: Create Chat Is Idempotent.yml  Create Chat.yml  Delete Chat.yml  List Chats.yml  List Messages.yml  Send Message.yml  Verify Chat Cascade Deleted.yml  folder.yml
jeli-server/Jeli-Bruno/notifications/: List.yml  Mark Read.yml  Read All.yml  folder.yml
jeli-server/alembic/: env.py  script.py.mako
jeli-server/docs/: matching-and-graph.md
jeli-server/src/: dependencies.py  exceptions.py  main.py  models.py  router.py  ws_manager.py
(+197 files in other folders)
